# C_CPP_Introduction

./: # some remarks to CMAKE.md  .gitignore  CMakeLists.txt  README.md  Unit tests.md  basicstructures_in_c.md  howto_helloWorld.md
FIR_Filter/: CMakeLists.txt  FIR.cpp  FIR.h  FirUnitTests.cpp  TestFirMain.cpp
MitAlles/: CMakeLists.txt  FIR.cpp  FIR.h  NoiseGenerator.cpp  NoiseGenerator.h  SinusGenerator.cpp  SinusGenerator.h  main.cpp  version.h.in
SinusGenerator/: CMakeLists.txt  SinusGenerator.h  SinusTestmain.cpp
VersioningTest/: CMakeLists.txt  main.cpp  version.h.in
WaveLib/: CMakeLists.txt  WaveOut.h
WaveLibUser/: CMakeLists.txt  main.cpp
datatypes/: CMakeLists.txt  datatypesmain.cpp
fileoutdemo/: CMakeLists.txt  fileout.cpp
noiseout/: CMakeLists.txt  noiseout_vectorfktmain.cpp  noiseout_vectormain.cpp  noiseoutmain.cpp
simplemath/: CMakeLists.txt  main.cpp  simplemath.cpp  simplemath.h
wave_writer/: CMakeLists.txt  WaveOut.cpp  WaveOut.h  main.cpp
