cmake_minimum_required(VERSION 3.12)

SET(PROJECT_NAME "Demo_Programs")

project(${PROJECT_NAME} VERSION 0.0.1 LANGUAGES CXX)


#add_subdirectory(hello_world)
#add_subdirectory(datatypes)
#add_subdirectory(simplemath)
#add_subdirectory(fileoutdemo)
#add_subdirectory(noiseout)
#add_subdirectory(wave_writer)
# add_subdirectory(WaveLib)
# add_subdirectory(WaveLibUser)
add_subdirectory(FIR_Filter)
